# gfx-api-learning

./: CMakeLists.txt
source/: App.cpp  App.hpp  AppleBridge.h  AppleBridge.mm  D3D12App.cpp  D3D12CommandQueue.cpp  D3D12CommandQueue.hpp  D3D12Common.cpp  D3D12Common.hpp  DxApp.cpp  MTLApp.cpp  VkApp.cpp  VkApp.h  main.cpp
source/shaders/: dx_fs.hlsl  dx_vs.hlsl  metal.metal  shader_defs.h  vk.vert
